# daft

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  README.md  release.toml
.github/workflows/: ci.yml  release.yml
daft/: Cargo.toml  README.md
daft-derive/: CHANGELOG.md  Cargo.toml  README.md
daft-derive/src/: lib.rs
daft-derive/src/internals/: error_store.rs  imp.rs  mod.rs
daft-derive/tests/: integration_test.rs  serde_snapshot.rs  snapshot_test.rs  ui_test.rs
daft-derive/tests/fixtures/: README.md
daft-derive/tests/fixtures/invalid/: enum-attributes.rs  enum-attributes.stderr  field-attribute-with-value.rs  field-attribute-with-value.stderr  field-leaf-and-ignore.rs  field-leaf-and-ignore.stderr  field-specified-multiple-times.rs  field-specified-multiple-times.stderr  field-unknown-attribute.rs  field-unknown-attribute.stderr  struct-attribute-with-value.rs  struct-attribute-with-value.stderr  struct-field-not-diffable.rs  struct-field-not-diffable.stderr  struct-leaf-attributes.rs  struct-leaf-attributes.stderr  struct-specified-multiple-times.rs  struct-specified-multiple-times.stderr  struct-unknown-attribute-multiple.rs  struct-unknown-attribute-multiple.stderr  struct-unknown-attribute.rs  struct-unknown-attribute.stderr  union-attributes.rs  union-attributes.stderr
daft-derive/tests/fixtures/invalid/output/: enum-attributes.output.rs  field-specified-multiple-times.output.rs  struct-field-not-diffable.output.rs  struct-leaf-attributes.output.rs  struct-specified-multiple-times.output.rs  union-attributes.output.rs
daft-derive/tests/fixtures/serde/: leaf_field.json  map_field.json  mixed_fields.json  nested_struct.json  set_field.json  simple_struct.json  tuple_struct.json
daft-derive/tests/fixtures/valid/: attributes.rs  basic.rs  changes.rs  complex-lifetimes.rs  default-type-param.rs  empty-structs.rs  generic-enum.rs  generic-struct-2.rs  generic-struct-leaf.rs  generic-struct.rs  non-eq.rs  non-exhaustive.rs  union.rs
daft-derive/tests/fixtures/valid/output/: attributes.output.rs  basic.output.rs  changes.output.rs  complex-lifetimes.output.rs  default-type-param.output.rs  empty-structs.output.rs  generic-enum.output.rs  generic-struct-2.output.rs  generic-struct-leaf.output.rs  generic-struct.output.rs  non-eq.output.rs  non-exhaustive.output.rs  union.output.rs
daft/src/: alloc_impls.rs  changes.rs  core_impls.rs  diffable.rs  leaf.rs  lib.rs  macros.rs  std_impls.rs
diffwalk/: Cargo.toml
diffwalk-derive/: Cargo.toml
diffwalk-derive/src/: lib.rs
diffwalk-derive/tests/: integration_test.rs
diffwalk/src/: lib.rs
