[workspace]
resolver = "2"
members = [
    "daft",
    "daft-derive",
]

[workspace.package]
edition = "2021"
repository = "https://github.com/oxidecomputer/daft"
rust-version = "1.81.0"
license = "MIT OR Apache-2.0"
keywords = ["diff", "difference", "semantic-diff", "structural-diff"]

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(doc_cfg)"] }

[workspace.dependencies]
datatest-stable = "0.3.2"
# Do not define a version for the daft-derive -> daft dependency, so it gets
# stripped from daft-derive's Cargo.toml.
daft = { path = "daft" }
# Use a fixed version number for daft-derive, so daft and daft-derive are always
# in sync -- the two are released in lockstep.
daft-derive = { version = "=0.1.1", path = "daft-derive" }
expectorate = "1.1.0"
newtype-uuid = "1.2.1"
oxnet = "0.1.0"
paste = "1.0.15"
prettyplease = "0.2.29"
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
trybuild = "1.0.103"
uuid = "1.12.0"
