[package]
name = "daft-derive"
version = "0.1.0"
description = "Derive macro for daft"
edition.workspace = true
repository.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["full"] }

[dev-dependencies]
daft.workspace = true
datatest-stable.workspace = true
expectorate.workspace = true
prettyplease.workspace = true
trybuild.workspace = true
uuid = { workspace = true, features = ["v4"] }

[[test]]
name = "snapshot_test"
harness = false
