[package]
name = "daft-derive"
version = "0.1.0"
description = "Derive macro for daft"
readme = "README.md"
categories = ["development-tools"]
keywords.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["full", "visit"] }

[dev-dependencies]
daft = { workspace = true, features = ["derive"] }
datatest-stable.workspace = true
expectorate.workspace = true
prettyplease.workspace = true
trybuild.workspace = true
uuid = { workspace = true, features = ["v4"] }

[[test]]
name = "snapshot_test"
harness = false

[package.metadata.cargo-sync-rdme.badge.badges]
license = true
crates-io = true
docs-rs = true
rust-version = true
