[package]
name = "daft-derive"
version = "0.1.1"
description = "Derive macro for daft"
readme = "README.md"
categories = ["development-tools"]
keywords.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["full", "visit"] }

[dev-dependencies]
daft = { workspace = true, features = ["derive"] }
datatest-stable.workspace = true
expectorate.workspace = true
prettyplease.workspace = true
trybuild.workspace = true
uuid = { workspace = true, features = ["v4"] }

[[test]]
name = "snapshot_test"
harness = false

[package.metadata.cargo-sync-rdme.badge.badges]
license = true
crates-io = true
docs-rs = true
rust-version = true

[package.metadata.release]
pre-release-replacements = [
    { file = "src/lib.rs", search = "^#!\\[doc\\(html_root_url = \"https://docs.rs/daft-derive/.*\"\\)\\]$", replace = "#![doc(html_root_url = \"https://docs.rs/daft-derive/{{version}}\")]", exactly = 1 },
]
