[package]
name = "daft"
version = "0.1.6"
description = "Structural diffs of Rust data structures"
readme = "README.md"
categories = ["development-tools", "no-std::no-alloc"]
keywords.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
daft-derive = { workspace = true, optional = true }
indexmap = { workspace = true, optional = true }
newtype-uuid = { workspace = true, optional = true }
oxnet = { workspace = true, optional = true }
paste.workspace = true
serde = { workspace = true, optional = true, features = ["alloc", "derive"] }
uuid = { workspace = true, optional = true, features = ["v4"] }

[dev-dependencies]
serde_json.workspace = true

[features]
default = ["std"]
# Enabling `std` flips on `serde`'s `std` feature too when serde is in use,
# so the `*Changes` types for `HashMap`/`HashSet` get the right Serialize
# impls. The `?` form is a no-op when `serde` is disabled.
std = ["alloc", "serde?/std"]
alloc = []
derive = ["dep:daft-derive"]
newtype-uuid1 = ["dep:newtype-uuid"]
oxnet01 = ["dep:oxnet"]
uuid1 = ["dep:uuid"]
indexmap = ["dep:indexmap", "alloc"]
# `serde` adds `Serialize` impls to `Leaf` and to the `*Changes` types so
# that a diff projected via `IntoChanges` can be emitted to JSON or any
# other serde format with unchanged subtrees omitted entirely.
serde = ["dep:serde", "daft-derive?/serde", "indexmap?/serde"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg=doc_cfg"]

[package.metadata.cargo-sync-rdme.badge.badges]
license = true
crates-io = true
docs-rs = true
rust-version = true

[package.metadata.release]
pre-release-replacements = [
    { file = "../CHANGELOG.md", search = "Unreleased", replace = "[{{version}}]", min = 1 },
    { file = "../CHANGELOG.md", search = "ReleaseDate", replace = "{{date}}", min = 1 },
    { file = "../CHANGELOG.md", search = "<!-- next-header -->", replace = "<!-- next-header -->\n## Unreleased - ReleaseDate\n", exactly = 1 },
    { file = "../CHANGELOG.md", search = "<!-- next-url -->", replace = "<!-- next-url -->\n[{{version}}]: https://github.com/oxidecomputer/daft/releases/tag/daft-{{version}}", exactly = 1 },
]
